--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
  <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/faviconlogo.png" />
+  <link rel="icon" href="%PUBLIC_URL%/titlelogo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/faviconlogo.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/titlelogo.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>KCR Transport - Think Transport Think Us</title>
 </head>
